se definio el ancho de la pagina

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     </head>
 
     <body>
+      <div id="contenido">
         <center><h1>TUTOR CAFE</h1></center>
         <p>este es el contenido de la pagina</p>
+      </div>
     </body>
 </html>
